tests/neg-macros/newClassExtendsNoParents/Test_2.scala
import scala.language.experimental

def test: Any = makeClass("foo") // error
